# lang-memgpt-local

./: .env.example  .gitignore  Makefile  README.md  debugger_streamlit.py  example_local.py  langgraph.json  pyproject.toml  streamlit_app.py
chroma_db/: chroma.sqlite3
lang_memgpt_local/: __init__.py  _schemas.py  _settings.py  _utils.py  chat.py  graph.py  tools.py
lang_memgpt_local/adapters/: base.py  chroma.py
memory_langgraph/: app_ctx.py  chat.py  graph.py  prompts.py  tools.py
memory_langgraph/db/: mongo_adapter.py  qdrant_adapter.py
memory_langgraph/nodes/: __init__.py  agent_llm.py  load_memories.py  response_llm.py  summarize_conversation.py
memory_langgraph/tools/: __init__.py  ask_wisdom.py  load_core_memories.py  save_core_memories.py  save_recall_memory.py  search_recall_memory.py  search_tavily.py
memory_langgraph/vector_db/: __init__.py  chroma.py  chroma_adapter.py  interface.py  mongo_adapter.py  qdrant_adapter.py
tests/: conftest.py  test_core_memory.py  test_memories.py  test_recall_memory.py
tests/evals/: test_memories.py
