[tool.poetry]
name = "lang-memgpt-local"
version = "0.0.1"
description = "A simple memory-enabled agent for agents using LangChain and LangGraph, running locally. This code is adapted for local use by Jacob Golden and Claude 3.5 Sonnet"
authors = ["William Fu-Hinthorn <13333726+hinthornw@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
langgraph = "^0.1.0"
langchain-fireworks = "^0.1.3"
jsonpatch = "^1.33"
dydantic = "^0.0.6"
pytest-asyncio = "^0.23.7"
trustcall = "^0.0.4"
langchain = "^0.2.6"
langchain-openai = "^0.1.10"
langchain-anthropic = "^0.1.19"
pydantic-settings = "^2.3.4"
langchain-community = "^0.2.6"
tavily-python = "^0.3.3"
tiktoken = "^0.7.0"
chromadb = "^0.4.22"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"
langchain-qdrant = "^0.1.4"
qdrant-client = "^1.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.0"
pytest = "^8.2.2"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"